--- a/test.html
+++ b/test.html
@@ -1,120 +1,84 @@
-<!DOCTYPE html>
 <html>
 <head>
-    <link href="test.css" rel="stylesheet"/>
+    <link rel="stylesheet" type="text/css" href="test.css">
+    <script src="bower_components/jquery/dist/jquery.js"></script>
 </head>
 <body>
-
-<div class="ts-table">
-    <table class="ts-table-head">
-        <colgroup width="100">
-        <colgroup width="100">
-
-
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Color</th>
-                <th>Desc</th>
-            </tr>
-        </thead>
-    </table>
-    <div class="ts-table-body">
-        <table>
-            <colgroup width="100">
-            <colgroup width="100">
+<h1>Basic Scenario</h1>
+<div id="jsGrid" class="jsgrid" style="position: relative; height: 90%; width: 100%;">
+    <div class="jsgrid-grid-header jsgrid-header-scrollbar">
+        <table class="jsgrid-table">
             <tbody>
-            <tr>
-                <td>Apple</td>
-                <td>Red</td>
-                <td>These are red.</td>
+            <tr class="jsgrid-header-row">
+                <th class="jsgrid-header-sortable" style="width: 150px;">Name</th>
+                <th class="jsgrid-header-sortable" style="width: 50px;">Age</th>
+                <th class="jsgrid-header-sortable" style="width: 200px;">Address</th>
+                <th class="jsgrid-header-sortable" style="width: 100px;">Country</th>
+                <th style="width: 100px;">Is Married</th>
             </tr>
-            <tr>
-                <td>Pear</td>
-                <td>Green</td>
-                <td>These are green.</td>
-            </tr>
-            <tr>
-                <td>Grape</td>
-                <td>Purple / Green</td>
-                <td>These are purple and green.</td>
-            </tr>
-            <tr>
-                <td>Orange</td>
-                <td>Orange</td>
-                <td>These are orange.</td>
-            </tr>
-            <tr>
-                <td>Banana</td>
-                <td>Yellow</td>
-                <td>These are yellow.</td>
-            </tr>
-            <tr>
-                <td>Kiwi</td>
-                <td>Green</td>
-                <td>These are green.</td>
-            </tr>
-            <tr>
-                <td>Plum</td>
-                <td>Purple</td>
-                <td>These are Purple</td>
-            </tr>
-            <tr>
-                <td>Watermelon</td>
-                <td>Red</td>
-                <td>These are red.</td>
-            </tr>
-            <tr>
-                <td>Tomato</td>
-                <td>Red</td>
-                <td>These are red.</td>
-            </tr>
-            <tr>
-                <td>Cherry</td>
-                <td>Red</td>
-                <td>These are red.</td>
-            </tr>
-            <tr>
-                <td>Cantelope</td>
-                <td>Orange</td>
-                <td>These are orange inside.</td>
-            </tr>
-            <tr>
-                <td>Honeydew</td>
-                <td>Green</td>
-                <td>These are green inside.</td>
-            </tr>
-            <tr>
-                <td>Papaya</td>
-                <td>Green</td>
-                <td>These are green.</td>
-            </tr>
-            <tr>
-                <td>Raspberry</td>
-                <td>Red</td>
-                <td>These are red.</td>
-            </tr>
-            <tr>
-                <td>Blueberry</td>
-                <td>Blue</td>
-                <td>These are blue.</td>
-            </tr>
-            <tr>
-                <td>Mango</td>
-                <td>Orange</td>
-                <td>These are orange.</td>
-            </tr>
-            <tr>
-                <td>Passion Fruit</td>
-                <td>Green</td>
-                <td>These are green.</td>
+            <tr class="jsgrid-filter-row">
+                <td style="width: 150px;"><input type="text"></td>
+                <td style="width: 50px;"><input type="number"></td>
+                <td style="width: 200px;"><input type="text"></td>
+                <td style="width: 100px;"><select>
+                    <option value="0"></option>
+                    <option value="1">United States</option>
+                    <option value="2">Canada</option>
+                    <option value="3">United Kingdom</option>
+                    <option value="4">France</option>
+                    <option value="5">Brazil</option>
+                    <option value="6">China</option>
+                    <option value="7">Russia</option>
+                </select></td>
+                <td style="width: 100px;"><input type="checkbox" readonly=""></td>
             </tr>
             </tbody>
         </table>
     </div>
-
+    <div class="jsgrid-grid-body" style="height: 331px;">
+        <table class="jsgrid-table" style="width: 1899px;">
+            <tbody>
+                <tr class="jsgrid-row">
+                    <td style="width: 150px;">Otto Clay</td>
+                    <td class="jsgrid-align-right" style="width: 50px;">61</td>
+                    <td style="width: 200px;">Ap #897-1459 Quam Avenue</td>
+                    <td class="jsgrid-align-center" style="width: 100px;">China</td>
+                    <td class="jsgrid-align-center" style="width: 100px;"><input type="checkbox" disabled=""></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="jsgrid-pager-container" style="display: block;">
+        <div class="jsgrid-pager">Pages: <span class="jsgrid-pager-nav-button jsgrid-pager-nav-inactive-button"><a
+                href="javascript:void(0);">First</a></span> <span
+                class="jsgrid-pager-nav-button jsgrid-pager-nav-inactive-button"><a href="javascript:void(0);">Prev</a></span>
+            <span class="jsgrid-pager-page jsgrid-pager-current-page">1</span><span class="jsgrid-pager-page"><a
+                    href="javascript:void(0);">2</a></span><span class="jsgrid-pager-page"><a
+                    href="javascript:void(0);">3</a></span><span class="jsgrid-pager-page"><a
+                    href="javascript:void(0);">4</a></span><span class="jsgrid-pager-page"><a
+                    href="javascript:void(0);">5</a></span><span class="jsgrid-pager-nav-button"><a
+                    href="javascript:void(0);">...</a></span> <span class="jsgrid-pager-nav-button"><a
+                    href="javascript:void(0);">Next</a></span> <span class="jsgrid-pager-nav-button"><a
+                    href="javascript:void(0);">Last</a></span> &nbsp;&nbsp; 1 of 7
+        </div>
+    </div>
 </div>
 
+<script>
 
-</body>
-</html>
+    var refreshHeight = function () {
+        $('.jsgrid-grid-body').height($('.jsgrid').height()- $('.jsgrid-grid-header .jsgrid-table').height() - $('.jsgrid-pager-container').height());
+    };
+    var refreshWidth = function () {
+        $('.jsgrid-grid-body .jsgrid-table').width($('.jsgrid-grid-header .jsgrid-table').width());
+    };
+    $(window).on('load', function () {
+        refreshHeight();
+        refreshWidth();
+    });
+    $(window).on('resize', function () {
+        refreshHeight();
+        refreshWidth();
+    });
+</script>
+
