--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
     <script src="bower_components/jquery/dist/jquery.js"></script>
 </head>
 <body>
-<div class="ts-grid">
+<div class="ts-grid" style="position: relative; height: 100%;">
     <div class="ts-grid-header">
         <table class="ts-grid-table">
             <tbody>
@@ -21,6 +21,48 @@
     <div class="ts-grid-body">
         <table class="ts-grid-table">
             <tbody>
+                <tr class="ts-grid-row">
+                    <td>Otto Clay</td>
+                    <td>61</td>
+                    <td>Ap #897-1459 Quam Avenue</td>
+                    <td>China</td>
+                </tr>
+                <tr class="ts-grid-row">
+                    <td>Otto Clay</td>
+                    <td>61</td>
+                    <td>Ap #897-1459 Quam Avenue</td>
+                    <td>China</td>
+                </tr>
+                <tr class="ts-grid-row">
+                    <td>Otto Clay</td>
+                    <td>61</td>
+                    <td>Ap #897-1459 Quam Avenue</td>
+                    <td>China</td>
+                </tr>
+                <tr class="ts-grid-row">
+                    <td>Otto Clay</td>
+                    <td>61</td>
+                    <td>Ap #897-1459 Quam Avenue</td>
+                    <td>China</td>
+                </tr>
+                <tr class="ts-grid-row">
+                    <td>Otto Clay</td>
+                    <td>61</td>
+                    <td>Ap #897-1459 Quam Avenue</td>
+                    <td>China</td>
+                </tr>
+                <tr class="ts-grid-row">
+                    <td>Otto Clay</td>
+                    <td>61</td>
+                    <td>Ap #897-1459 Quam Avenue</td>
+                    <td>China</td>
+                </tr>
+                <tr class="ts-grid-row">
+                    <td>Otto Clay</td>
+                    <td>61</td>
+                    <td>Ap #897-1459 Quam Avenue</td>
+                    <td>China</td>
+                </tr>
                 <tr class="ts-grid-row">
                     <td>Otto Clay</td>
                     <td>61</td>
